# ChangeLog for dev-perl/Email-Date
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Date/ChangeLog,v 1.29 2012/03/08 12:41:26 phajdan.jr Exp $

  08 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  Email-Date-1.103.0.ebuild:
  x86 stable wrt bug #400097

  06 Mar 2012; Brent Baude <ranger@gentoo.org> Email-Date-1.103.0.ebuild:
  Marking Email-Date-1.103.0 ppc for bug 400097

  02 Mar 2012; Brent Baude <ranger@gentoo.org> Email-Date-1.103.0.ebuild:
  Marking Email-Date-1.103.0 ppc64 for bug 400097

  25 Feb 2012; Tobias Klausmann <klausman@gentoo.org>
  Email-Date-1.103.0.ebuild:
  Stable on alpha, bug #400097

  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> Email-Date-1.103.0.ebuild:
  Stable for amd64, wrt bug #400097

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Email-Date-1.103.ebuild:
  Cleanup

*Email-Date-1.103.0 (31 Aug 2011)

  31 Aug 2011; Torsten Veller <tove@gentoo.org> +Email-Date-1.103.0.ebuild:
  Change version scheme

  02 May 2009; Torsten Veller <tove@gentoo.org> -Email-Date-1.101.ebuild:
  Cleanup

  12 Dec 2008; Joseph Jezak <josejx@gentoo.org> Email-Date-1.103.ebuild:
  Marked ~ppc for bug #235557.

  18 Nov 2008; Torsten Veller <tove@gentoo.org> Email-Date-1.101.ebuild,
  Email-Date-1.102.ebuild, Email-Date-1.103.ebuild:
  New virtuals: Time-Piece

  25 Aug 2008; Raúl Porcel <armin76@gentoo.org> Email-Date-1.103.ebuild:
  Add ~alpha/~ia64 wrt #235557

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> Email-Date-1.103.ebuild:
  Added ~ppc64; bug #235557

  24 Aug 2008; Markus Meier <maekke@gentoo.org> Email-Date-1.103.ebuild:
  add ~amd64, bug #235557

  24 Aug 2008; <bluebird@gentoo.org> Email-Date-1.103.ebuild:
  Add ~sparc keyword, bug #235557

*Email-Date-1.103 (23 Aug 2008)

  23 Aug 2008; Torsten Veller <tove@gentoo.org> +Email-Date-1.103.ebuild:
  Version bump

  08 Dec 2007; Raúl Porcel <armin76@gentoo.org> Email-Date-1.102.ebuild:
  alpha/ia64 stable
