@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Date/Email-Date-1.102.ebuild,v 1.10 2008/11/18 14:47:44 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Date/Email-Date-1.102.ebuild,v 1.11 2012/03/24 19:59:12 armin76 Exp $
 
 inherit perl-module
 
@@ -12,7 +12,7 @@ IUSE=""
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="alpha amd64 ia64 ppc ppc64 sparc x86"
+KEYWORDS="alpha amd64 ppc ppc64 x86"
 
 DEPEND="virtual/perl-Test-Simple
 	>=dev-perl/Email-Abstract-2.13.1
