@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Date/Email-Date-1.103.0.ebuild,v 1.6 2012/03/08 12:41:26 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Date/Email-Date-1.103.0.ebuild,v 1.7 2012/03/24 19:59:12 armin76 Exp $
 
 EAPI=4
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="Find and Format Date Headers"
 
 SLOT="0"
-KEYWORDS="alpha amd64 ~ia64 ppc ppc64 ~sparc x86"
+KEYWORDS="alpha amd64 ppc ppc64 x86"
 IUSE=""
 
 RDEPEND=">=dev-perl/TimeDate-1.16
