@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Email-Date
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Date/ChangeLog,v 1.29 2012/03/08 12:41:26 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Date/ChangeLog,v 1.30 2012/03/24 19:59:12 armin76 Exp $
+
+  24 Mar 2012; Raúl Porcel <armin76@gentoo.org> Email-Date-1.102.ebuild,
+  Email-Date-1.103.0.ebuild:
+  Drop ia64/sparc keywords
 
   08 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   Email-Date-1.103.0.ebuild:
